# niceparse

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/niceparse/: __init__.py  _core.py  _nice.py  strict.py
tests/: test_cpython_suite.py  test_help_ux.py  test_nice.py  test_parity.py
