[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "niceparse"
version = "0.2.0"
description = "A from-scratch, drop-in replacement for the standard library's argparse."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "NevermindNilas" }]
keywords = ["argparse", "cli", "command-line", "argument-parser", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/NevermindNilas/niceparse"
Repository = "https://github.com/NevermindNilas/niceparse"
Issues = "https://github.com/NevermindNilas/niceparse/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/niceparse"]

[tool.hatch.build.targets.sdist]
include = ["src/niceparse", "README.md", "LICENSE", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
